2006-05-15  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Maciej.

        - Fixed <rdar://problem/4534904> please do not treat "debugger" as
        a reserved word while parsing JavaScript (and other ECMA reserved
        words) 

        AKA 

        http://bugzilla.opendarwin.org/show_bug.cgi?id=6179 
        We treat "char" as a reserved word in JavaScript and firefox/IE do
        not

        (1) I unreserved most of the spec's "future reserved words" because 
        they're not reserved in IE or FF. (Most, but not all, because IE
        somewhat randomly *does* reserve a few of them.)
        (2) I made 'debugger' a legitimate statement that acts like an empty
        statement because FF and IE support it.
        
        * kjs/grammar.y:
        * kjs/keywords.table:

2006-05-15  Tim Omernick  <timo@apple.com>

        Reviewed by John Sullivan.

        Part of <rdar://problem/4466508> Add 64-bit support to the Netscape Plugin API

        Added to the Netscape Plugin API the concept of "plugin drawing models".  The drawing model
        determines the kind of graphics context created by the browser for the plugin, as well as 
        the Mac types of various Netscape Plugin API data structures.

        There is a drawing model to represent the old QuickDraw-based API.  It is used by default
        if QuickDraw is available on the system, unless the plugin specifies another drawing model.

        The big change is the addition of the CoreGraphics drawing model.  A plugin may request this
        drawing model to obtain access to a CGContextRef for drawing, instead of a QuickDraw CGrafPtr.

        * bindings/npapi.h:
        Define NP_NO_QUICKDRAW when compiling 64-bit; there is no 64-bit QuickDraw.
        Added NPNVpluginDrawingModel, NPNVsupportsQuickDrawBool, and NPNVsupportsCoreGraphicsBool
        variables.
        Added NPDrawingModel enumeration.  Currently the only drawing models are QuickDraw and
        CoreGraphics.