@@ -1,3 +1,9 @@
+2006-05-15  Alexey Proskuryakov  <ap@nypop.com>
+
+        * Scripts/install-unix-extras: Changed to be executable and removed
+        text in the file generated by "svn diff".
+        * Scripts/regenerate-makefiles: Ditto.
+
 2006-05-13  Kevin M. Ollivier  <kevino@theolliviers.com>
 
         Reviewed by Darin, landed by ap.
