@@ -1,3 +1,8 @@
+2006-05-15  Alexey Proskuryakov  <ap@nypop.com>
+
+        * make-generated-sources.sh: Changed to be executable and removed
+        text in the file generated by "svn diff".
+
 2006-05-15  Geoffrey Garen  <ggaren@apple.com>
 
         Reviewed by Maciej.
